WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246107
AX: AXCoreObject::detach should not set the object ID to null.
https://bugs.webkit.org/show_bug.cgi?id=246107
Summary
AX: AXCoreObject::detach should not set the object ID to null.
Andres Gonzalez
Reported
2022-10-05 14:28:10 PDT
This causes problems to update the isolated tree.
Attachments
Patch
(10.90 KB, patch)
2022-10-05 14:52 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(16.58 KB, patch)
2022-10-06 18:37 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-10-05 14:28:22 PDT
<
rdar://problem/100824159
>
Andres Gonzalez
Comment 2
2022-10-05 14:52:55 PDT
Created
attachment 462824
[details]
Patch
Andres Gonzalez
Comment 3
2022-10-06 18:37:37 PDT
Created
attachment 462853
[details]
Patch
EWS
Comment 4
2022-10-07 06:28:23 PDT
Committed
255265@main
(e8ab960fb10d): <
https://commits.webkit.org/255265@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 462853
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug