Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp
@@ -39,22 +39,18 @@
 namespace WebCore {
 
 AXIsolatedObject::AXIsolatedObject(const Ref<AXCoreObject>& axObject, AXIsolatedTree* tree)
-    : m_cachedTree(tree)
-    , m_id(axObject->objectID())
+    : AXCoreObject(axObject->objectID())
+    , m_cachedTree(tree)
 {
     ASSERT(isMainThread());
     ASSERT(is<AccessibilityObject>(axObject));
+    ASSERT(objectID().isValid());
 
     auto* axParent = axObject->parentObjectUnignored();
     m_parentID = axParent ? axParent->objectID() : AXID();
 
-    if (m_id.isValid()) {
-        auto isRoot = !axParent && axObject->isScrollView() ? IsRoot::Yes : IsRoot::No;
-        initializeProperties(axObject, isRoot);
-    } else {
-        // Should never happen under normal circumstances.
-        ASSERT_NOT_REACHED();
-    }
+    auto isRoot = !axParent && axObject->isScrollView() ? IsRoot::Yes : IsRoot::No;
+    initializeProperties(axObject, isRoot);
 }
 
 Ref<AXIsolatedObject> AXIsolatedObject::create(const Ref<AXCoreObject>& object, AXIsolatedTree* tree)
@@ -372,12 +368,10 @@ void AXIsolatedObject::initializeProperties(const Ref<AXCoreObject>& coreObject,
 AccessibilityObject* AXIsolatedObject::associatedAXObject() const
 {
     ASSERT(isMainThread());
-
-    if (!m_id.isValid())
-        return nullptr;
+    ASSERT(objectID().isValid());
 
     auto* axObjectCache = this->axObjectCache();
-    return axObjectCache ? axObjectCache->objectForID(m_id) : nullptr;
+    return axObjectCache ? axObjectCache->objectForID(objectID()) : nullptr;
 }
 
 void AXIsolatedObject::setMathscripts(AXPropertyName propertyName, AXCoreObject& object)
@@ -508,7 +502,7 @@ bool AXIsolatedObject::isDetachedFromParent()
 
     // Check whether this is the root node, in which case we should return false.
     if (auto root = tree()->rootNode())
-        return root->objectID() != m_id;
+        return root->objectID() != objectID();
     return false;
 }
 
