Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.h
@@ -50,8 +50,6 @@ public:
     static Ref<AXIsolatedObject> create(const Ref<AXCoreObject>&, AXIsolatedTree*);
     ~AXIsolatedObject();
 
-    void setObjectID(AXID id) override { m_id = id; }
-    AXID objectID() const override { return m_id; }
     void init() override;
 
     void attachPlatformWrapper(AccessibilityObjectWrapper*);
@@ -576,7 +574,6 @@ private:
     // Ideally this would be a WeakPtr<AXIsolatedTree>, but WebKit's WeakPtr is not currently thread-safe.
     RefPtr<AXIsolatedTree> m_cachedTree;
     AXID m_parentID;
-    AXID m_id;
     Vector<AXID> m_childrenIDs;
     Vector<RefPtr<AXCoreObject>> m_children;
     AXPropertyMap m_propertyMap;
